@@ -56,11 +56,11 @@ public class JwtUtils {
 	}
 	
 	 private static Claims getClaimsFormToken(String token) {
-		 //byte[] jwtSecretBytes1 = Base64.getDecoder().decode(jwtSecret);
-		 byte[] jwtSecretBytes2 = DatatypeConverter.parseBase64Binary(jwtSecret);
-		 //System.out.println(jwtSecretBytes1);
-		 System.out.println(jwtSecretBytes2);
-         return (Claims) Jwts.parser().setSigningKey(jwtSecretBytes2).parseClaimsJws(token).getBody();
+		 byte[] jwtSecretBytes1 = Base64.getDecoder().decode(jwtSecret);
+		 //byte[] jwtSecretBytes2 = DatatypeConverter.parseBase64Binary(jwtSecret);
+		 System.out.println(jwtSecretBytes1);
+		 //System.out.println(jwtSecretBytes2);
+         return Jwts.parser().setSigningKey(jwtSecretBytes1).parseClaimsJws(token).getBody();
     }
 	 
 	 public static String getUserEmailFromToken(String token) {
